[package]
name = "todo-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.115"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tide = "0.16.0"
once_cell = "1.19.0"
async-std = "1.12.0"
surf = { version = "2.3.2", features = ["rustls_crate", "h1-client-rustls"], default-features = false }
hyper = "0.14.28"
